About page Additional info

--- a/ancillary-styles/_mixins.scss
+++ b/ancillary-styles/_mixins.scss
@@ -21,3 +21,15 @@
     right: $val;
   }
 }
+
+@mixin section-popup-onscroll {
+  opacity: 0;
+  transform: translateY(200px);
+  transition: 1.7s all ease;
+
+  &--active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: 1.7s all ease;
+  }
+}
