--- a/ancillary-styles/_mixins.scss
+++ b/ancillary-styles/_mixins.scss
@@ -22,6 +22,16 @@
   }
 }
 
+// @mixin header-popup-onscroll {
+//   opacity: 0;
+//   transition: 1.7s all ease;
+
+//   &--active {
+//     opacity: 1;
+//     transition: 1.7s all ease;
+//   }
+// }
+
 @mixin section-popup-onscroll {
   opacity: 0;
   transform: translateY(200px);
