--- a/common-blocks/_footer.scss
+++ b/common-blocks/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  @include section-popup-onscroll;
+  // @include section-popup-onscroll;
   @include flex(space-between, start);
 
   flex-wrap: wrap;
