--- a/pages/about/css/about.scss
+++ b/pages/about/css/about.scss
@@ -2,6 +2,7 @@
 @import "../../../ancillary-styles/_mixins";
 @import "../../../ancillary-styles/_common.styles";
 
+@import "../../../common-blocks/btn-to-top/_btn-to-top";
 @import "../../../common-blocks/header-upper/_header-upper";
 @import "../../../common-blocks/services/services";
 @import "../../../common-blocks/_card";
@@ -46,98 +47,98 @@
 //   margin: 0 auto;
 // }
 
-// .header {
-//   background-color: black;
-// }
+.header {
+  @include header-popup-onscroll;
 
-.header__menu-item-link,
-.header__call-link {
-  color: #000;
-}
+  .header__menu-item-link,
+  .header__call-link {
+    color: #000;
+  }
 
-.header__central {
-  padding-top: 200px;
-  // padding-left: 400px;
-  // padding-bottom: 65px;
-}
-
-@media screen and (max-width: 1024px) {
   .header__central {
-    padding-top: 100px;
+    padding-top: 200px;
+    // padding-left: 400px;
+    // padding-bottom: 65px;
   }
-}
 
-@media screen and (max-width: 450px) {
-  .header__central {
-    padding-top: 50px;
+  @media screen and (max-width: 1024px) {
+    .header__central {
+      padding-top: 100px;
+    }
   }
-}
 
-.header__title {
-  font-weight: bold;
-  font-size: 57px;
-  line-height: 80%;
-  width: 550px;
-  text-transform: none;
+  @media screen and (max-width: 450px) {
+    .header__central {
+      padding-top: 50px;
+    }
+  }
 
-  margin-left: 405px;
-}
-
-@media screen and (max-width: 1250px) {
   .header__title {
-    margin-left: 80px;
+    font-weight: bold;
+    font-size: 57px;
+    line-height: 80%;
+    width: 550px;
+    text-transform: none;
+
+    margin-left: 405px;
   }
-}
 
-@media screen and (max-width: 1024px) {
-  .header__title {
-    font-size: 2rem;
-    width: 350px;
+  @media screen and (max-width: 1250px) {
+    .header__title {
+      margin-left: 80px;
+    }
   }
-}
 
-@media screen and (max-width: 700px) {
-  .header__title {
-    margin-left: 50px;
+  @media screen and (max-width: 1024px) {
+    .header__title {
+      font-size: 2rem;
+      width: 350px;
+    }
   }
-}
 
-@media screen and (max-width: 450px) {
-  .header__title {
-    font-size: 1.5rem;
-    width: 250px;
+  @media screen and (max-width: 700px) {
+    .header__title {
+      margin-left: 50px;
+    }
   }
-}
 
-.header__title-span {
-  color: $accent-color;
-}
+  @media screen and (max-width: 450px) {
+    .header__title {
+      font-size: 1.5rem;
+      width: 250px;
+    }
+  }
 
-.header__central-decor-el {
-  height: 75px;
-  width: 100%;
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
-}
+  .header__title-span {
+    color: $accent-color;
+  }
 
-@media screen and (max-width: 450px) {
   .header__central-decor-el {
-    height: 50px;
+    height: 75px;
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
   }
-}
 
-.header__lower {
-  width: 100%;
-  min-height: 768px;
-  // border: 1px solid #000;
+  @media screen and (max-width: 450px) {
+    .header__central-decor-el {
+      height: 50px;
+    }
+  }
 
-  background: url("../../../images/pages/about-page/office-meeting.jpg") center
-    center no-repeat; // 0 -250px
-  background-size: cover;
-}
-
-@media screen and (max-width: 1350px) {
   .header__lower {
-    min-height: 500px;
+    width: 100%;
+    min-height: 768px;
+    // border: 1px solid #000;
+
+    background: url("../../../images/pages/about-page/office-meeting.jpg")
+      center center no-repeat; // 0 -250px
+    background-size: cover;
+  }
+
+  @media screen and (max-width: 1350px) {
+    .header__lower {
+      min-height: 500px;
+    }
   }
 }
 
@@ -501,7 +502,7 @@
 }
 
 .team {
- @include section-popup-onscroll;
+  @include section-popup-onscroll;
 
   .team__upper {
     padding-top: 200px;
