--- a/pages/index/scss/index.scss
+++ b/pages/index/scss/index.scss
@@ -2,12 +2,12 @@
 @import "../../../ancillary-styles/_mixins";
 @import "../../../ancillary-styles/_common.styles";
 
+@import "../../..//common-blocks/services/_services";
 @import "../../../common-blocks/header-upper/_header-upper";
 @import "../../../common-blocks/_card";
 @import "../../../common-blocks/_socials";
 @import "../../../common-blocks/_brands";
 @import "../../../common-blocks/_footer";
-@import "../../../common-blocks/services/_services";
 
 .header {
   // background-color: teal;
@@ -16,7 +16,6 @@
 
   @media screen and (max-width: 768px) {
     & {
-      // width: 70vw;
       height: 70vh;
     }
   }
@@ -66,7 +65,6 @@
 
   @media screen and (max-width: 768px) {
     .swiper-container {
-      // width: 100vw;
       height: 70vh;
     }
   }
@@ -90,11 +88,34 @@
 
   .swiper-button-prev {
     left: 65px;
-    // top: 0;
+  }
+
+  @media screen and (max-width: 768px) {
+    .swiper-button-prev {
+      top: 240px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .swiper-button-prev {
+      left: 20px;
+    }
   }
 
   .swiper-button-next {
     left: 120px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .swiper-button-next {
+      top: 240px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .swiper-button-next {
+      left: 75px;
+    }
   }
 
   .swiper-button-prev:hover,
@@ -110,25 +131,38 @@
   .swiper-slide {
     width: 100vw;
     height: 100vh;
+    // background-position: center center;
   }
+
+  @media screen and (max-width: 768px) {
+    .swiper-slide {
+      height: 70vh;
+    }
+  }
+
+  // @media screen and (max-width: 450px) {
+  //   .swiper-slide {
+  //     height: 60vh;
+  //   }
+  // }
 
   .swiper-slide__first {
     background: url("../../../images/pages/index-page/header-section/exterior-2.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
     // background-position-y: -200px; // изменить картинку или позиционирование в адаптиве
   }
 
   .swiper-slide__second {
     background: url("../../../images/pages/index-page/header-section/interior-1.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
     // background-position-y: -200px;
   }
 
   .swiper-slide__third {
     background: url("../../../images/pages/index-page/header-section/exterior-1.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
     // background-position-y: -100px;
   }
@@ -151,6 +185,14 @@
   @media screen and (max-width: 768px) {
     .swiper-slide__upper {
       padding-left: 200px;
+      border-bottom: none;
+      height: 40%;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .swiper-slide__upper {
+      padding-left: 110px;
     }
   }
 
@@ -165,6 +207,12 @@
     cursor: default;
   }
 
+  @media screen and (max-width: 1024px) {
+    .swiper-slide__title {
+      font-size: 4rem;
+    }
+  }
+
   .swiper-slide__lower {
     display: flex;
     padding-left: 405px;
@@ -177,7 +225,21 @@
     }
   }
 
+  @media screen and (max-width: 768px) {
+    .swiper-slide__lower {
+      flex-direction: column;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .swiper-slide__lower {
+      padding-left: 20px;
+    }
+  }
+
   .swiper-slide__btn {
+    // display: block; // ?
+
     width: 230px;
     height: 50px;
 
@@ -188,6 +250,12 @@
     font-family: inherit;
     background-color: $accent-color;
     transition: 0.2s all ease;
+  }
+
+  @media screen and (max-width: 768px) {
+    .swiper-slide__btn {
+      margin-bottom: 50px;
+    }
   }
 
   .swiper-slide__btn:hover {
@@ -209,10 +277,28 @@
     cursor: default;
   }
 
+  @media screen and (max-width: 768px) {
+    .swiper-slide__text {
+      font-size: 0.9rem;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .swiper-slide__text {
+      max-width: 280px;
+    }
+  }
+
   .swiper-pagination {
     text-align: left;
     margin-left: 60px;
     margin-bottom: 45px;
+  }
+
+  @media screen and (max-width: 450px) {
+    .swiper-pagination {
+      margin-left: 20px;
+    }
   }
 
   .swiper-pagination-bullet {
@@ -230,10 +316,25 @@
 }
 
 .portfolio {
+  @include section-popup-onscroll;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(auto, 566px);
   width: 100%;
+
+  @media screen and (max-width: 1024px) {
+    & {
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: minmax(auto, 400px);
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    & {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
 
   .portfolio__card {
     // background-size: cover;
@@ -245,52 +346,95 @@
 
   .portfolio__card--first {
     background: url("../../../images/pages/index-page/portfolio-section/interior-1-cut.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
   }
 
   .portfolio__card--second {
     background: url("../../../images/pages/index-page/portfolio-section/interior-2-cut.jpg")
-      no-repeat;
+      left center no-repeat;
     background-size: cover;
   }
 
   .portfolio__card--third {
     background: url("../../../images/pages/index-page/portfolio-section/exterior-1-cut.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
   }
 
   .portfolio__card--fourth {
     background: url("../../../images/pages/index-page/portfolio-section/interior-3-cut.jpg")
-      no-repeat;
+      left center no-repeat;
     background-size: cover;
   }
 
   .portfolio__card--fifth {
     background: url("../../../images/pages/index-page/portfolio-section/extrior-2.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
   }
 
   .portfolio__card--second {
     grid-column: 2 / 4;
   }
+
+  @media screen and (max-width: 1024px) {
+    .portfolio__card--second {
+      grid-column: auto;
+    }
+
+    .portfolio__card--fifth {
+      grid-column: 1 / 3;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .portfolio__card--fifth {
+      grid-column: auto;
+    }
+  }
 }
 
 .trends {
-  padding-top: 260px;
+  @include section-popup-onscroll;
+
+  padding-top: 200px;
 
   // .trends__container {
   // }
+
+  @media screen and (max-width: 1250px) {
+    & {
+      padding-left: 40px;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    & {
+      padding-top: 100px;
+      padding-right: 40px;
+    }
+  }
 
   .trends__upper {
     display: flex;
     min-height: 566px;
   }
 
+  @media screen and (max-width: 1024px) {
+    .trends__upper {
+      flex-direction: column;
+    }
+  }
+
   .trends__upper-left {
     width: 50%;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .trends__upper-left {
+      width: 100%;
+    }
   }
 
   .trends__title {
@@ -306,6 +450,18 @@
     margin-bottom: 200px;
   }
 
+  @media screen and (max-width: 1024px) {
+    .trends__title {
+      margin: 0 auto 70px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .trends__title {
+      font-size: 2.5rem;
+    }
+  }
+
   .trends__title-span {
     color: $accent-color;
   }
@@ -314,6 +470,13 @@
     max-width: 405px;
     @include font(400, 1rem);
     line-height: 140%;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .trends__upper-text {
+      text-align: center;
+      margin: 0 auto 40px;
+    }
   }
 
   .trends__upper-right {
@@ -325,15 +488,35 @@
     height: 566px;
   }
 
+  @media screen and (max-width: 1024px) {
+    .trends__upper-right {
+      position: static;
+      width: 100%;
+    }
+  }
+
   .trends__upper-right {
     background: url("../../../images/pages/index-page/trends-section/interior-1.jpg")
-      no-repeat;
+      center center no-repeat;
     background-size: cover;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .trends__upper-right {
+      width: 100%;
+      height: 400px;
+    }
   }
 
   .trends__lower {
     padding-top: 150px;
     display: flex;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .trends__lower {
+      padding-top: 100px;
+    }
   }
 
   .trends__lower-left {
@@ -383,6 +566,7 @@
 
   .trends__lower-right {
     width: 50%;
+    // padding-left: 130px;
   }
 
   .trends__lower-right-title {
@@ -394,14 +578,57 @@
     // line-height: 80%;
     // letter-spacing: 0.1rem;
     text-transform: uppercase;
+    margin-bottom: 30px;
+  }
+
+  .trends__video-wrapper {
+    margin-left: 150px;
+    position: relative;
+    @extend %centering-flex-container;
+    cursor: pointer;
+  }
+
+  .trends__play-btn {
+    width: 110px;
+    height: 110px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 10;
+    cursor: pointer;
+  }
+
+  .trends__play-btn--inactive {
+    display: none;
+  }
+
+  .trends__play-btn::after {
+    content: url("../../../images/general-imgs/video-arrow.png");
+    position: absolute;
+    left: calc(52% - 10px);
+    top: calc(50% - 11px);
+    // left: 0;
+    // top: 0;
+    width: 20px;
+    height: 22px;
+
+    // @extend %centering-flex-container;
   }
 
   .trends__video {
-    width: 100%;
+    // width: 100%;
+    width: 900px;
+    // height: 600px;
+    // height: 100%;
+    // margin-left: auto;
+    height: 505px;
+    object-fit: cover;
   }
 }
 
 .clients {
+  @include section-popup-onscroll;
+
   padding-top: 200px;
   padding-bottom: 200px;
   position: relative;
@@ -454,6 +681,22 @@
   }
 
   .clients__carousel {
+    // display: flex;
+    // flex-direction: column;
+    // position: relative;
+  }
+
+  .clients__carousel-slide {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .clients__carousel-slide--first,
+  .clients__carousel-slide--second {
+    display: none;
+  }
+
+  .clients__carousel-slide--active {
     display: flex;
   }
 
@@ -488,6 +731,18 @@
     background-position-x: -15px;
   }
 
+  .clients__pic--third {
+    background: url("../../../images/pages/index-page/clients-section/person-3.jpg")
+      center center;
+    background-size: cover;
+  }
+
+  .clients__pic--fourth {
+    background: url("../../../images/pages/index-page/clients-section/person-4.jpg")
+      center center;
+    background-size: cover;
+  }
+
   .clients__name {
     border-bottom: 1px solid #000;
     width: 480px;
@@ -518,6 +773,8 @@
 }
 
 .news {
+  @include section-popup-onscroll;
+
   padding-top: 160px;
   padding-bottom: 160px;
   background-color: #f9f9f9;
