--- a/pages/news/css/news.css
+++ b/pages/news/css/news.css
@@ -124,6 +124,13 @@ a {
   }
 }
 
+@media screen and (max-width: 450px) {
+  .header__upper {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 .header__mobile-btn--open {
   display: none;
 }
@@ -144,6 +151,12 @@ a {
     visibility: visible;
     -webkit-transition: 1s all ease;
     transition: 1s all ease;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header__mobile-btn--open {
+    right: 20px;
   }
 }
 
@@ -354,6 +367,12 @@ a {
   padding: 50px 0 60px 40px;
 }
 
+@media screen and (max-width: 450px) {
+  .card {
+    padding-left: 20px;
+  }
+}
+
 .card:hover {
   background: none;
   background-color: #fff;
@@ -378,8 +397,14 @@ a {
   right: 32px;
   font-weight: 600;
   font-size: 13px;
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 450px) {
+  .card__category {
+    font-size: 0.7rem;
+  }
 }
 
 .card__title {
@@ -387,8 +412,20 @@ a {
   margin-bottom: 55px;
   font-weight: bold;
   font-size: 25px;
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .card__title {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .card__title {
+    font-size: 1.2rem;
+  }
 }
 
 .card__title:first-line {
@@ -402,8 +439,14 @@ a {
   margin-right: 30px;
   text-align: center;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 1rem;
   line-height: 140%;
+}
+
+@media screen and (max-width: 450px) {
+  .card__text {
+    font-size: 0.9rem;
+  }
 }
 
 .card__link {
@@ -413,8 +456,10 @@ a {
   font-weight: normal;
   font-size: 18px;
   color: #000;
-  -webkit-transition: .3s transform ease;
-  transition: .3s transform ease;
+  -webkit-transition: 0.3s -webkit-transform ease;
+  transition: 0.3s -webkit-transform ease;
+  transition: 0.3s transform ease;
+  transition: 0.3s transform ease, 0.3s -webkit-transform ease;
   width: 88px;
   height: 88px;
   background-color: #f27935;
@@ -424,8 +469,10 @@ a {
 .card__link:hover {
   -webkit-transform: translateX(5px);
           transform: translateX(5px);
-  -webkit-transition: .2s transform ease;
-  transition: .2s transform ease;
+  -webkit-transition: 0.2s -webkit-transform ease;
+  transition: 0.2s -webkit-transform ease;
+  transition: 0.2s transform ease;
+  transition: 0.2s transform ease, 0.2s -webkit-transform ease;
 }
 
 .card__link::after {
